--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Latest normalize CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
-  <!-- internal CSS styles -->
+  <!-- CSS styles -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
   <link rel="stylesheet" href="assets/css/main.css">
+  <link rel="shortcut icon" href="assets/icons/dog.ico">
   <title>Dogs project</title>
 </head>
 
